--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QQ音乐</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="favicon.ico" href="./img/favicon.ico">
 </head>
 <body>
 <!-- 头部 -->
